<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="E_TIMER_STATUS" Id="{a1b1945c-ac5c-4b51-b923-961bc71c5d99}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_TIMER_STATUS :
(
	STATUS_TIMER_NOT_INIT	:= 0,
	STATUS_TIMER_IDLE,
	STATUS_TIMER_ARMED,
	STATUS_TIMER_ACTIVE,
	STATUS_TIMER_ERROR
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>