<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="T_TIMER_CFG" Id="{40a3a810-fa3b-468c-85d0-6f13c45da2ee}">
    <Declaration><![CDATA[TYPE T_TIMER_CFG :
STRUCT
	nMaxActive:			DINT := 3600;	(* 	Maximum time for Active output [sec].
											Used to protect EL2262. *)
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>